Revert to using a regular cached executor.